# FTG

./: CMakeLists.txt  README.md
assets/: assets.qrc
assets/Configs/: Character.json  Map.json
src/: MyGame.cpp  MyGame.h
src/Items/: Item.cpp  Item.h  Mountable.cpp  Mountable.h
src/Items/Armors/: Armor.cpp  Armor.h  DefaultArmor.cpp  DefaultArmor.h  FlamebreakerArmor.cpp  FlamebreakerArmor.h  HeavyArmor.cpp  HeavyArmor.h  LightArmor.cpp  LightArmor.h  OldShirt.cpp  OldShirt.h
src/Items/AttackItem/: Ball.cpp  Ball.h  Charm.cpp  Charm.h  EnhancedCharm.cpp  EnhancedCharm.h  Fist.h  MeleeItem.cpp  MeleeItem.h  RangedItem.cpp  RangedItem.h  Stick.h
src/Items/AttackItems/: Ball.cpp  Ball.h  Charm.cpp  Charm.h  EnhancedCharm.cpp  EnhancedCharm.h  Fist.cpp  Fist.h  MeleeItem.h  RangedItem.cpp  RangedItem.h  Stick.cpp  Stick.h
src/Items/BattleSystemWiget/: HpBar.h
src/Items/Characters/: Character.cpp  Character.h  Marisa.cpp  Marisa.h  Reimu.cpp  Reimu.h
src/Items/HeadEquipments/: CapOfTheHero.cpp  CapOfTheHero.h  HeadEquipment.cpp  HeadEquipment.h
src/Items/LegEquipments/: LegEquipment.cpp  LegEquipment.h  WellWornTrousers.cpp  WellWornTrousers.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Bridge.cpp  Bridge.h  HighGrass.cpp  HighGrass.h  Map.cpp  Map.h  MistyLake.cpp  MistyLake.h
src/Items/Props/: Adrenaline.cpp  Adrenaline.h  Bandage.cpp  Bandage.h  Medkit.cpp  Medkit.h  Props.cpp  Props.h
src/Items/SystemWidgets/: AmmoBar.cpp  AmmoBar.h  ArmorBar.cpp  ArmorBar.h  HpBar.cpp  HpBar.h
src/Items/Weapons/: EnhancedMelee.cpp  EnhancedMelee.h  Melee.cpp  Melee.h  Ranged.cpp  Ranged.h  SpellCard.cpp  SpellCard.h  Throw.cpp  Throw.h  Weapon.cpp  Weapon.h
src/Scenes/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
